# app/core/routes/api/base/__init__.py
@@ -5,3 +5,4 @@ Copyright: © 2024 Emmanuel Olowu <zeddyemy@gmail.com>
 """
 
 from . import (index, auth, qrcode, template, scan, payment)
+from . import requests, notifications
